--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "agentic-sandbox",
     "fastapi[standard]>=0.129.0",
+    "kubernetes>=30.1.0",
 ]
 
 [tool.uv.sources]
